antlr/TM1RulesParser.js
// $ANTLR 3.3 Nov 30, 2010 12:50:56 TM1Rules.g 2015-05-14 13:28:48

var TM1RulesParser = function(input, state) {
    if (!state) {
        state = new org.antlr.runtime.RecognizerSharedState();
    }

    (function(){
    }).call(this);

    TM1RulesParser.superclass.constructor.call(this, input, state);


         

    /* @todo only create adaptor if output=AST */
    this.adaptor = new org.antlr.runtime.tree.CommonTreeAdaptor();

};

org.antlr.lang.augmentObject(TM1RulesParser, {
    EOF: -1,
    T__38: 38,
    T__39: 39,
    T__40: 40,
    T__41: 41,
    T__42: 42,
    T__43: 43,
    T__44: 44,
    T__45: 45,
    T__46: 46,
    T__47: 47,
    T__48: 48,
    T__49: 49,
    T__50: 50,
    T__51: 51,
    T__52: 52,
    T__53: 53,
    T__54: 54,
    T__55: 55,
    T__56: 56,
    T__57: 57,
    T__58: 58,
    T__59: 59,
    T__60: 60,
    T__61: 61,
    T__62: 62,
    T__63: 63,
    T__64: 64,
    T__65: 65,
    T__66: 66,
    T__67: 67,
    T__68: 68,
    T__69: 69,
    T__70: 70,
    T__71: 71,
    T__72: 72,
    T__73: 73,
    T__74: 74,
    T__75: 75,
    RULE_FILE: 4,
    RULES: 5,
    RULE_DEF: 6,
    PRAGMA: 7,
    FEEDER_DEF: 8,
    LEVEL_EXPR: 9,
    N_LEVEL: 10,
    C_LEVEL: 11,
    S_LEVEL: 12,
    AREA_DEFN: 13,
    AREA_SCOPE: 14,
    AREA_ITEM_SET: 15,
    FUNCTION: 16,
    EXPR_LIST: 17,
    CONTINUE: 18,
    STET: 19,
    FEEDERS: 20,
    SKIPCHECK: 21,
    UNDEFVALS: 22,
    FEEDSTRINGS: 23,
    STRING: 24,
    IDENTIFIER: 25,
    NUMBER: 26,
    BANG_IDENTIFIER: 27,
    T_CONTINUE: 28,
    T_STET: 29,
    T_FEEDERS: 30,
    T_SKIPCHECK: 31,
    T_UNDEFVALS: 32,
    T_FEEDSTRINGS: 33,
    T_IDENTIFIER: 34,
    T_BANG_IDENTIFIER: 35,
    T_NUMBER: 36,
    T_STRING: 37
});

(function(){
// public class variables
var EOF= -1,
    T__38= 38,
    T__39= 39,
    T__40= 40,
    T__41= 41,
    T__42= 42,
    T__43= 43,
    T__44= 44,
    T__45= 45,
    T__46= 46,
    T__47= 47,
    T__48= 48,
    T__49= 49,
    T__50= 50,
    T__51= 51,
    T__52= 52,
    T__53= 53,
    T__54= 54,
    T__55= 55,
    T__56= 56,
    T__57= 57,
    T__58= 58,
    T__59= 59,
    T__60= 60,
    T__61= 61,
    T__62= 62,
    T__63= 63,
    T__64= 64,
    T__65= 65,
    T__66= 66,
    T__67= 67,
    T__68= 68,
    T__69= 69,
    T__70= 70,
    T__71= 71,
    T__72= 72,
    T__73= 73,
    T__74= 74,
    T__75= 75,
    RULE_FILE= 4,
    RULES= 5,
    RULE_DEF= 6,
    PRAGMA= 7,
    FEEDER_DEF= 8,
    LEVEL_EXPR= 9,
    N_LEVEL= 10,
    C_LEVEL= 11,
    S_LEVEL= 12,
    AREA_DEFN= 13,
    AREA_SCOPE= 14,
    AREA_ITEM_SET= 15,
    FUNCTION= 16,
    EXPR_LIST= 17,
    CONTINUE= 18,
    STET= 19,
    FEEDERS= 20,
    SKIPCHECK= 21,
    UNDEFVALS= 22,
    FEEDSTRINGS= 23,
    STRING= 24,
    IDENTIFIER= 25,
    NUMBER= 26,
    BANG_IDENTIFIER= 27,
    T_CONTINUE= 28,
    T_STET= 29,
    T_FEEDERS= 30,
    T_SKIPCHECK= 31,
    T_UNDEFVALS= 32,
    T_FEEDSTRINGS= 33,
    T_IDENTIFIER= 34,
    T_BANG_IDENTIFIER= 35,
    T_NUMBER= 36,
    T_STRING= 37;

// public instance methods/vars
org.antlr.lang.extend(TM1RulesParser, org.antlr.runtime.Parser, {
        
    setTreeAdaptor: function(adaptor) {
        this.adaptor = adaptor;
    },
    getTreeAdaptor: function() {
        return this.adaptor;
    },

    getTokenNames: function() { return TM1RulesParser.tokenNames; },
    getGrammarFileName: function() { return "TM1Rules.g"; }
});
org.antlr.lang.augmentObject(TM1RulesParser.prototype, {

    // inline static return class
    ruleFile_return: (function() {
        TM1RulesParser.ruleFile_return = function(){};
        org.antlr.lang.extend(TM1RulesParser.ruleFile_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // TM1Rules.g:15:1: ruleFile : rules ( feeders )? -> ^( RULE_FILE ^( RULES rules ) ^( FEEDERS ( feeders )? ) ) ;
    // $ANTLR start "ruleFile"
    ruleFile: function() {
        var retval = new TM1RulesParser.ruleFile_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

         var rules1 = null;
         var feeders2 = null;

        var stream_feeders=new org.antlr.runtime.tree.RewriteRuleSubtreeStream(this.adaptor,"rule feeders");
        var stream_rules=new org.antlr.runtime.tree.RewriteRuleSubtreeStream(this.adaptor,"rule rules");
        try {
            // TM1Rules.g:15:11: ( rules ( feeders )? -> ^( RULE_FILE ^( RULES rules ) ^( FEEDERS ( feeders )? ) ) )
            // TM1Rules.g:15:13: rules ( feeders )?
            this.pushFollow(TM1RulesParser.FOLLOW_rules_in_ruleFile115);
            rules1=this.rules();

            this.state._fsp--;

            stream_rules.add(rules1.getTree());
            // TM1Rules.g:15:19: ( feeders )?
            var alt1=2;
            var LA1_0 = this.input.LA(1);

            if ( (LA1_0==T_FEEDERS) ) {
                alt1=1;
            }
            switch (alt1) {
                case 1 :
                    // TM1Rules.g:15:19: feeders
                    this.pushFollow(TM1RulesParser.FOLLOW_feeders_in_ruleFile117);
                    feeders2=this.feeders();

                    this.state._fsp--;

                    stream_feeders.add(feeders2.getTree());


                    break;

            }



            // AST REWRITE
            // elements: feeders, rules
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            retval.tree = root_0;
            var stream_retval=new org.antlr.runtime.tree.RewriteRuleSubtreeStream(this.adaptor,"token retval",retval!=null?retval.tree:null);

            root_0 = this.adaptor.nil();
            // 15:28: -> ^( RULE_FILE ^( RULES rules ) ^( FEEDERS ( feeders )? ) )
            {
                // TM1Rules.g:15:31: ^( RULE_FILE ^( RULES rules ) ^( FEEDERS ( feeders )? ) )
                {
                var root_1 = this.adaptor.nil();
                root_1 = this.adaptor.becomeRoot(this.adaptor.create(RULE_FILE, "RULE_FILE"), root_1);

                // TM1Rules.g:15:43: ^( RULES rules )
                {
                var root_2 = this.adaptor.nil();
                root_2 = this.adaptor.becomeRoot(this.adaptor.create(RULES, "RULES"), root_2);

                this.adaptor.addChild(root_2, stream_rules.nextTree());

                this.adaptor.addChild(root_1, root_2);
                }
                // TM1Rules.g:15:58: ^( FEEDERS ( feeders )? )
                {
                var root_2 = this.adaptor.nil();
                root_2 = this.adaptor.becomeRoot(this.adaptor.create(FEEDERS, "FEEDERS"), root_2);

                // TM1Rules.g:15:68: ( feeders )?
                if ( stream_feeders.hasNext() ) {
                    this.adaptor.addChild(root_2, stream_feeders.nextTree());

                }
                stream_feeders.reset();

                this.adaptor.addChild(root_1, root_2);
                }

                this.adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;


            retval.stop = this.input.LT(-1);

            retval.tree = this.adaptor.rulePostProcessing(root_0);
            this.adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (re) {
            if (re instanceof org.antlr.runtime.RecognitionException) {
                this.reportError(re);
                this.recover(this.input,re);
                retval.tree = this.adaptor.errorNode(this.input, retval.start, this.input.LT(-1), re);
            } else {
                throw re;
            }
        }
        finally {
        }
        return retval;
    },

    // inline static return class
    rules_return: (function() {
        TM1RulesParser.rules_return = function(){};
        org.antlr.lang.extend(TM1RulesParser.rules_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // TM1Rules.g:16:1: rules : ( pragma | ruleDef )* ;
    // $ANTLR start "rules"
    rules: function() {
        var retval = new TM1RulesParser.rules_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

         var pragma3 = null;
         var ruleDef4 = null;


        try {
            // TM1Rules.g:16:7: ( ( pragma | ruleDef )* )
            // TM1Rules.g:16:9: ( pragma | ruleDef )*
            root_0 = this.adaptor.nil();

            // TM1Rules.g:16:9: ( pragma | ruleDef )*
            loop2:
            do {
                var alt2=3;
                var LA2_0 = this.input.LA(1);

                if ( ((LA2_0>=T_SKIPCHECK && LA2_0<=T_FEEDSTRINGS)) ) {
                    alt2=1;
                }
                else if ( (LA2_0==71) ) {
                    alt2=2;
                }


                switch (alt2) {
                case 1 :
                    // TM1Rules.g:16:10: pragma
                    this.pushFollow(TM1RulesParser.FOLLOW_pragma_in_rules146);
                    pragma3=this.pragma();

                    this.state._fsp--;

                    this.adaptor.addChild(root_0, pragma3.getTree());


                    break;
                case 2 :
                    // TM1Rules.g:16:19: ruleDef
                    this.pushFollow(TM1RulesParser.FOLLOW_ruleDef_in_rules150);
                    ruleDef4=this.ruleDef();

                    this.state._fsp--;

                    this.adaptor.addChild(root_0, ruleDef4.getTree());


                    break;

                default :
                    break loop2;
                }
            } while (true);




            retval.stop = this.input.LT(-1);

            retval.tree = this.adaptor.rulePostProcessing(root_0);
            this.adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (re) {
            if (re instanceof org.antlr.runtime.RecognitionException) {
                this.reportError(re);
                this.recover(this.input,re);
                retval.tree = this.adaptor.errorNode(this.input, retval.start, this.input.LT(-1), re);
            } else {
                throw re;
            }
        }
        finally {
        }
        return retval;
    },

    // inline static return class
    feeders_return: (function() {
        TM1RulesParser.feeders_return = function(){};
        org.antlr.lang.extend(TM1RulesParser.feeders_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // TM1Rules.g:17:1: feeders : kwFeeders ';' ( feederDef )* ;
    // $ANTLR start "feeders"
    feeders: function() {
        var retval = new TM1RulesParser.feeders_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

        var char_literal6 = null;
         var kwFeeders5 = null;
         var feederDef7 = null;

        var char_literal6_tree=null;

        try {
            // TM1Rules.g:17:9: ( kwFeeders ';' ( feederDef )* )
            // TM1Rules.g:17:11: kwFeeders ';' ( feederDef )*
            root_0 = this.adaptor.nil();

            this.pushFollow(TM1RulesParser.FOLLOW_kwFeeders_in_feeders160);
            kwFeeders5=this.kwFeeders();

            this.state._fsp--;

            char_literal6=this.match(this.input,38,TM1RulesParser.FOLLOW_38_in_feeders163); 
            // TM1Rules.g:17:27: ( feederDef )*
            loop3:
            do {
                var alt3=2;
                var LA3_0 = this.input.LA(1);

                if ( (LA3_0==71) ) {
                    alt3=1;
                }


                switch (alt3) {
                case 1 :
                    // TM1Rules.g:17:27: feederDef
                    this.pushFollow(TM1RulesParser.FOLLOW_feederDef_in_feeders166);
                    feederDef7=this.feederDef();

                    this.state._fsp--;

                    this.adaptor.addChild(root_0, feederDef7.getTree());


                    break;

                default :
                    break loop3;
                }
            } while (true);




            retval.stop = this.input.LT(-1);

            retval.tree = this.adaptor.rulePostProcessing(root_0);
            this.adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (re) {
            if (re instanceof org.antlr.runtime.RecognitionException) {
                this.reportError(re);
                this.recover(this.input,re);
                retval.tree = this.adaptor.errorNode(this.input, retval.start, this.input.LT(-1), re);
            } else {
                throw re;
            }
        }
        finally {
        }
        return retval;
    },

    // inline static return class
    pragma_return: (function() {
        TM1RulesParser.pragma_return = function(){};
        org.antlr.lang.extend(TM1RulesParser.pragma_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // TM1Rules.g:18:1: pragma : pragmaItem ';' -> ^( PRAGMA pragmaItem ) ;
    // $ANTLR start "pragma"
    pragma: function() {
        var retval = new TM1RulesParser.pragma_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

        var char_literal9 = null;
         var pragmaItem8 = null;

        var char_literal9_tree=null;
        var stream_38=new org.antlr.runtime.tree.RewriteRuleTokenStream(this.adaptor,"token 38");
        var stream_pragmaItem=new org.antlr.runtime.tree.RewriteRuleSubtreeStream(this.adaptor,"rule pragmaItem");
        try {
            // TM1Rules.g:18:8: ( pragmaItem ';' -> ^( PRAGMA pragmaItem ) )
            // TM1Rules.g:18:10: pragmaItem ';'
            this.pushFollow(TM1RulesParser.FOLLOW_pragmaItem_in_pragma175);
            pragmaItem8=this.pragmaItem();

            this.state._fsp--;

            stream_pragmaItem.add(pragmaItem8.getTree());
            char_literal9=this.match(this.input,38,TM1RulesParser.FOLLOW_38_in_pragma177);  
            stream_38.add(char_literal9);



            // AST REWRITE
            // elements: pragmaItem
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            retval.tree = root_0;
            var stream_retval=new org.antlr.runtime.tree.RewriteRuleSubtreeStream(this.adaptor,"token retval",retval!=null?retval.tree:null);

            root_0 = this.adaptor.nil();
            // 18:25: -> ^( PRAGMA pragmaItem )
            {
                // TM1Rules.g:18:28: ^( PRAGMA pragmaItem )
                {
                var root_1 = this.adaptor.nil();
                root_1 = this.adaptor.becomeRoot(this.adaptor.create(PRAGMA, "PRAGMA"), root_1);

                this.adaptor.addChild(root_1, stream_pragmaItem.nextTree());

                this.adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;


            retval.stop = this.input.LT(-1);

            retval.tree = this.adaptor.rulePostProcessing(root_0);
            this.adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (re) {
            if (re instanceof org.antlr.runtime.RecognitionException) {
                this.reportError(re);
                this.recover(this.input,re);
                retval.tree = this.adaptor.errorNode(this.input, retval.start, this.input.LT(-1), re);
            } else {
                throw re;
            }
        }
        finally {
        }
        return retval;
    },

    // inline static return class
    pragmaItem_return: (function() {
        TM1RulesParser.pragmaItem_return = function(){};
        org.antlr.lang.extend(TM1RulesParser.pragmaItem_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // TM1Rules.g:19:1: pragmaItem : ( kwSkipcheck | kwUndefvals | kwFeedstrings );
    // $ANTLR start "pragmaItem"
    pragmaItem: function() {
        var retval = new TM1RulesParser.pragmaItem_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

         var kwSkipcheck10 = null;
         var kwUndefvals11 = null;
         var kwFeedstrings12 = null;


        try {
            // TM1Rules.g:19:12: ( kwSkipcheck | kwUndefvals | kwFeedstrings )
            var alt4=3;
            switch ( this.input.LA(1) ) {
            case T_SKIPCHECK:
                alt4=1;
                break;
            case T_UNDEFVALS:
                alt4=2;
                break;
            case T_FEEDSTRINGS:
                alt4=3;
                break;
            default:
                var nvae =
                    new org.antlr.runtime.NoViableAltException("", 4, 0, this.input);

                throw nvae;
            }

            switch (alt4) {
                case 1 :
                    // TM1Rules.g:19:14: kwSkipcheck
                    root_0 = this.adaptor.nil();

                    this.pushFollow(TM1RulesParser.FOLLOW_kwSkipcheck_in_pragmaItem192);
                    kwSkipcheck10=this.kwSkipcheck();

                    this.state._fsp--;

                    this.adaptor.addChild(root_0, kwSkipcheck10.getTree());


                    break;
                case 2 :
                    // TM1Rules.g:19:28: kwUndefvals
                    root_0 = this.adaptor.nil();

                    this.pushFollow(TM1RulesParser.FOLLOW_kwUndefvals_in_pragmaItem196);
                    kwUndefvals11=this.kwUndefvals();

                    this.state._fsp--;

                    this.adaptor.addChild(root_0, kwUndefvals11.getTree());


                    break;
                case 3 :
                    // TM1Rules.g:19:42: kwFeedstrings
                    root_0 = this.adaptor.nil();

                    this.pushFollow(TM1RulesParser.FOLLOW_kwFeedstrings_in_pragmaItem200);
                    kwFeedstrings12=this.kwFeedstrings();

                    this.state._fsp--;

                    this.adaptor.addChild(root_0, kwFeedstrings12.getTree());


                    break;

            }
            retval.stop = this.input.LT(-1);

            retval.tree = this.adaptor.rulePostProcessing(root_0);
            this.adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (re) {
            if (re instanceof org.antlr.runtime.RecognitionException) {
                this.reportError(re);
                this.recover(this.input,re);
                retval.tree = this.adaptor.errorNode(this.input, retval.start, this.input.LT(-1), re);
            } else {
                throw re;
            }
        }
        finally {
        }
        return retval;
    },

    // inline static return class
    ruleDef_return: (function() {
        TM1RulesParser.ruleDef_return = function(){};
        org.antlr.lang.extend(TM1RulesParser.ruleDef_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // TM1Rules.g:21:1: ruleDef : areaDefn '=' ruleBody -> ^( RULE_DEF areaDefn ruleBody ) ;
    // $ANTLR start "ruleDef"
    ruleDef: function() {
        var retval = new TM1RulesParser.ruleDef_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

        var char_literal14 = null;
         var areaDefn13 = null;
         var ruleBody15 = null;

        var char_literal14_tree=null;
        var stream_39=new org.antlr.runtime.tree.RewriteRuleTokenStream(this.adaptor,"token 39");
        var stream_ruleBody=new org.antlr.runtime.tree.RewriteRuleSubtreeStream(this.adaptor,"rule ruleBody");
        var stream_areaDefn=new org.antlr.runtime.tree.RewriteRuleSubtreeStream(this.adaptor,"rule areaDefn");
        try {
            // TM1Rules.g:21:9: ( areaDefn '=' ruleBody -> ^( RULE_DEF areaDefn ruleBody ) )
            // TM1Rules.g:21:11: areaDefn '=' ruleBody
            this.pushFollow(TM1RulesParser.FOLLOW_areaDefn_in_ruleDef209);
            areaDefn13=this.areaDefn();

            this.state._fsp--;

            stream_areaDefn.add(areaDefn13.getTree());
            char_literal14=this.match(this.input,39,TM1RulesParser.FOLLOW_39_in_ruleDef211);  
            stream_39.add(char_literal14);

            this.pushFollow(TM1RulesParser.FOLLOW_ruleBody_in_ruleDef213);
            ruleBody15=this.ruleBody();

            this.state._fsp--;

            stream_ruleBody.add(ruleBody15.getTree());


            // AST REWRITE
            // elements: areaDefn, ruleBody
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            retval.tree = root_0;
            var stream_retval=new org.antlr.runtime.tree.RewriteRuleSubtreeStream(this.adaptor,"token retval",retval!=null?retval.tree:null);

            root_0 = this.adaptor.nil();
            // 21:33: -> ^( RULE_DEF areaDefn ruleBody )
            {
                // TM1Rules.g:21:36: ^( RULE_DEF areaDefn ruleBody )
                {
                var root_1 = this.adaptor.nil();
                root_1 = this.adaptor.becomeRoot(this.adaptor.create(RULE_DEF, "RULE_DEF"), root_1);

                this.adaptor.addChild(root_1, stream_areaDefn.nextTree());
                this.adaptor.addChild(root_1, stream_ruleBody.nextTree());

                this.adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;


            retval.stop = this.input.LT(-1);

            retval.tree = this.adaptor.rulePostProcessing(root_0);
            this.adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (re) {
            if (re instanceof org.antlr.runtime.RecognitionException) {
                this.reportError(re);
                this.recover(this.input,re);
                retval.tree = this.adaptor.errorNode(this.input, retval.start, this.input.LT(-1), re);
            } else {
                throw re;
            }
        }
        finally {
        }
        return retval;
    },

    // inline static return class
    ruleBody_return: (function() {
        TM1RulesParser.ruleBody_return = function(){};
        org.antlr.lang.extend(TM1RulesParser.ruleBody_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // TM1Rules.g:22:1: ruleBody : ( expr ';' | ( levelExpr )+ );
    // $ANTLR start "ruleBody"
    ruleBody: function() {
        var retval = new TM1RulesParser.ruleBody_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

        var char_literal17 = null;
         var expr16 = null;
         var levelExpr18 = null;

        var char_literal17_tree=null;

        try {
            // TM1Rules.g:22:10: ( expr ';' | ( levelExpr )+ )
            var alt6=2;
            var LA6_0 = this.input.LA(1);

            if ( ((LA6_0>=T_CONTINUE && LA6_0<=T_STET)||(LA6_0>=T_IDENTIFIER && LA6_0<=T_STRING)||(LA6_0>=61 && LA6_0<=62)||(LA6_0>=68 && LA6_0<=69)||LA6_0==71) ) {
                alt6=1;
            }
            else if ( ((LA6_0>=41 && LA6_0<=46)) ) {
                alt6=2;
            }
            else {
                var nvae =
                    new org.antlr.runtime.NoViableAltException("", 6, 0, this.input);

                throw nvae;
            }
            switch (alt6) {
                case 1 :
                    // TM1Rules.g:22:12: expr ';'
                    root_0 = this.adaptor.nil();

                    this.pushFollow(TM1RulesParser.FOLLOW_expr_in_ruleBody230);
                    expr16=this.expr();

                    this.state._fsp--;

                    this.adaptor.addChild(root_0, expr16.getTree());
                    char_literal17=this.match(this.input,38,TM1RulesParser.FOLLOW_38_in_ruleBody232); 


                    break;
                case 2 :
                    // TM1Rules.g:22:24: ( levelExpr )+
                    root_0 = this.adaptor.nil();

                    // TM1Rules.g:22:24: ( levelExpr )+
                    var cnt5=0;
                    loop5:
                    do {
                        var alt5=2;
                        var LA5_0 = this.input.LA(1);

                        if ( ((LA5_0>=41 && LA5_0<=46)) ) {
                            alt5=1;
                        }


                        switch (alt5) {
                        case 1 :
                            // TM1Rules.g:22:24: levelExpr
                            this.pushFollow(TM1RulesParser.FOLLOW_levelExpr_in_ruleBody237);
                            levelExpr18=this.levelExpr();

                            this.state._fsp--;

                            this.adaptor.addChild(root_0, levelExpr18.getTree());


                            break;

                        default :
                            if ( cnt5 >= 1 ) {
                                break loop5;
                            }
                                var eee = new org.antlr.runtime.EarlyExitException(5, this.input);
                                throw eee;
                        }
                        cnt5++;
                    } while (true);



                    break;

            }
            retval.stop = this.input.LT(-1);

            retval.tree = this.adaptor.rulePostProcessing(root_0);
            this.adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (re) {
            if (re instanceof org.antlr.runtime.RecognitionException) {
                this.reportError(re);
                this.recover(this.input,re);
                retval.tree = this.adaptor.errorNode(this.input, retval.start, this.input.LT(-1), re);
            } else {
                throw re;
            }
        }
        finally {
        }
        return retval;
    },

    // inline static return class
    levelExpr_return: (function() {
        TM1RulesParser.levelExpr_return = function(){};
        org.antlr.lang.extend(TM1RulesParser.levelExpr_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // TM1Rules.g:23:1: levelExpr : level ':' expr ';' -> ^( LEVEL_EXPR level expr ) ;
    // $ANTLR start "levelExpr"
    levelExpr: function() {
        var retval = new TM1RulesParser.levelExpr_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

        var char_literal20 = null;
        var char_literal22 = null;
         var level19 = null;
         var expr21 = null;

        var char_literal20_tree=null;
        var char_literal22_tree=null;
        var stream_40=new org.antlr.runtime.tree.RewriteRuleTokenStream(this.adaptor,"token 40");
        var stream_38=new org.antlr.runtime.tree.RewriteRuleTokenStream(this.adaptor,"token 38");
        var stream_level=new org.antlr.runtime.tree.RewriteRuleSubtreeStream(this.adaptor,"rule level");
        var stream_expr=new org.antlr.runtime.tree.RewriteRuleSubtreeStream(this.adaptor,"rule expr");
        try {
            // TM1Rules.g:23:11: ( level ':' expr ';' -> ^( LEVEL_EXPR level expr ) )
            // TM1Rules.g:23:13: level ':' expr ';'
            this.pushFollow(TM1RulesParser.FOLLOW_level_in_levelExpr246);
            level19=this.level();

            this.state._fsp--;

            stream_level.add(level19.getTree());
            char_literal20=this.match(this.input,40,TM1RulesParser.FOLLOW_40_in_levelExpr248);  
            stream_40.add(char_literal20);

            this.pushFollow(TM1RulesParser.FOLLOW_expr_in_levelExpr250);
            expr21=this.expr();

            this.state._fsp--;

            stream_expr.add(expr21.getTree());
            char_literal22=this.match(this.input,38,TM1RulesParser.FOLLOW_38_in_levelExpr252);  
            stream_38.add(char_literal22);



            // AST REWRITE
            // elements: expr, level
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            retval.tree = root_0;
            var stream_retval=new org.antlr.runtime.tree.RewriteRuleSubtreeStream(this.adaptor,"token retval",retval!=null?retval.tree:null);

            root_0 = this.adaptor.nil();
            // 23:32: -> ^( LEVEL_EXPR level expr )
            {
                // TM1Rules.g:23:35: ^( LEVEL_EXPR level expr )
                {
                var root_1 = this.adaptor.nil();
                root_1 = this.adaptor.becomeRoot(this.adaptor.create(LEVEL_EXPR, "LEVEL_EXPR"), root_1);

                this.adaptor.addChild(root_1, stream_level.nextTree());
                this.adaptor.addChild(root_1, stream_expr.nextTree());

                this.adaptor.addChild(root_0, root_1);
                }
